# mlops_traning

./: .gitignore  README.md
module-02/advanced-python/: README.md  main.py  pyproject.toml
module-02/advanced-python/01-typing/: README.md
module-02/advanced-python/01-typing/examples/: advanced_types.py  basic_types.py  type_checking.py
module-02/advanced-python/01-typing/exercises/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py
module-02/advanced-python/01-typing/solution/: exercise_1_solution.py  exercise_2_solution.py  exercise_3_solution.py  exercise_4_solution.py  exercise_5_solution.py
module-02/advanced-python/02-uv/: README.md
module-02/advanced-python/02-uv/calculator-project/: pyproject.toml
module-02/advanced-python/02-uv/exercises/: 01-init-project.md  02-manage-deps.md  03-dev-setup.md  04-python-versions.md  05-scripts.md
module-02/advanced-python/03-pydantic/: README.md
module-02/advanced-python/03-pydantic/examples/: api_example.py  basic_model.py  nested_models.py  validators.py
module-02/advanced-python/03-pydantic/exercises/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py
module-02/advanced-python/03-pydantic/solution/: exercise_1_solution.py  exercise_2_solution.py  exercise_3_solution.py  exercise_4_solution.py  exercise_5_solution.py
module-02/advanced-python/04-decorators/: README.md
module-02/advanced-python/04-decorators/examples/: basic_decorator.py  class_decorators.py  decorator_arguments.py  (+1 more)
module-02/advanced-python/05-async-await/: README.md
(+29 files in other folders)
